--- a/app/src/main/res/layout/regis_fragment.xml
+++ b/app/src/main/res/layout/regis_fragment.xml
@@ -7,66 +7,102 @@
     android:layout_height="match_parent"
     tools:context=".ui.regis.RegisFragment">
 
-    <EditText
-        android:id="@+id/textregisname"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textfieldname"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        tools:layout_editor_absoluteY="605dp"
         android:layout_marginTop="132dp"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:ignore="MissingConstraints">
 
-    <EditText
-        android:id="@+id/textregisemail"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textregisname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Name" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textfieldemail"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="28dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textregisname" />
+        app:layout_constraintTop_toBottomOf="@+id/textfieldname"
+        tools:ignore="MissingConstraints">
 
-    <EditText
-        android:id="@+id/textregisphone"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textregisemail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textfieldphone"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="Phone"
-        android:inputType="phone"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textregisemail" />
+        app:layout_constraintTop_toBottomOf="@+id/textfieldemail"
+        tools:ignore="MissingConstraints">
 
-    <EditText
-        android:id="@+id/textregisdate"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textregisphone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Phone"
+            android:inputType="phone" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textfieldpdate"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="36dp"
-        android:hint="Date"
-        android:ems="10"
-        android:inputType="date"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textregisphone" />
+        app:layout_constraintTop_toBottomOf="@+id/textfieldphone"
+        tools:ignore="MissingConstraints">
 
-    <EditText
-        android:id="@+id/textregisaddres"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textregisdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Date"
+            android:inputType="date" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textfieldpaddres"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="Adress"
-        android:inputType="textPostalAddress"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textregisdate"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/textfieldpdate"
+        tools:ignore="MissingConstraints">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textregisaddres"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Adress"
+            android:inputType="textPostalAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/bSubmit"
@@ -74,7 +110,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="36dp"
+        android:background="@color/colorbutonok"
         android:text="Submit"
+        android:textColor="@color/colorwhitetext"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textregisaddres" />
+        app:layout_constraintTop_toBottomOf="@+id/textfieldpaddres" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
