--- a/app/src/main/res/layout/dashboar_cus_fragment.xml
+++ b/app/src/main/res/layout/dashboar_cus_fragment.xml
@@ -9,6 +9,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constMainAct"
         android:layout_width="match_parent"
         android:layout_height="650dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
