--- a/app/src/main/res/menu/menunavigator.xml
+++ b/app/src/main/res/menu/menunavigator.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_movie"
+        android:id="@+id/navigation_Home"
         android:icon="@mipmap/ic_launcher"
         android:title="Home" />
     <item
-        android:id="@+id/navigation_tv"
+        android:id="@+id/navigation_nearby"
         android:icon="@mipmap/ic_launcher"
         android:title="Nearby" />
     <item
-        android:id="@+id/navigation_Favorit"
+        android:id="@+id/navigation_history"
         android:icon="@mipmap/ic_launcher"
         android:title="Favorit" />
 </menu>
