--- a/app/src/main/res/layout/dashboar_cus_fragment.xml
+++ b/app/src/main/res/layout/dashboar_cus_fragment.xml
@@ -11,10 +11,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constMainAct"
         android:layout_width="match_parent"
-        android:layout_height="650dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="70dp"
         app:layout_constraintTop_toTopOf="parent">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
