--- a/app/src/main/res/layout/fragment_dashboard_list.xml
+++ b/app/src/main/res/layout/fragment_dashboard_list.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.dashboarcus.DashboardListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="80dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/recycleDashboard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
