--- a/app/src/main/res/layout/fragment_dashboard_list.xml
+++ b/app/src/main/res/layout/fragment_dashboard_list.xml
@@ -7,10 +7,13 @@
     tools:context=".ui.dashboarcus.DashboardListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginBottom="10dp"
-        android:id="@+id/recycleDashboard"
+        android:id="@+id/recyleMenu"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
