--- a/app/src/main/res/layout/template_grid_dashboard.xml
+++ b/app/src/main/res/layout/template_grid_dashboard.xml
@@ -8,6 +8,7 @@
     android:layout_marginTop="5dp"
     android:layout_height="200dp">
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardContentTeknisi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@style/CardView.Light"
