--- a/app/src/main/res/layout/jenis_kerusakan_fragment.xml
+++ b/app/src/main/res/layout/jenis_kerusakan_fragment.xml
@@ -7,51 +7,41 @@
     android:layout_height="match_parent"
     tools:context=".ui.jeniskerusakan.JenisKerusakanFragment">
 
-    <ScrollView
-        android:id="@+id/scrolView"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_kerusakan"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="75dp"
         tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        tools:layout_editor_absoluteY="1dp" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/list_kerusakan"
+        app:layout_constraintStart_toStartOf="@+id/list_kerusakan"
+        app:layout_constraintTop_toTopOf="@+id/list_kerusakan" />
 
-            <TextView
-                android:id="@+id/textCtgLayar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/bPriksa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="24dp"
+        android:text="Priksa"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recleviewCtgLayar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                app:layout_constraintTop_toBottomOf="@+id/textCtgLayar"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <TextView
-                android:id="@+id/textCtgrBatre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/recleviewCtgLayar"
-                android:text="TextView"
-                android:layout_marginTop="20dp"
-                tools:ignore="MissingConstraints" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recleviewCtgBatre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                app:layout_constraintTop_toBottomOf="@+id/textCtgrBatre"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="0dp" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    <Button
+        android:id="@+id/bChat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="24dp"
+        android:text="Chat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
