--- a/app/src/main/res/layout/dashboard_list_teknisi_fragment.xml
+++ b/app/src/main/res/layout/dashboard_list_teknisi_fragment.xml
@@ -12,4 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+
+    <ProgressBar
+        android:id="@+id/progresLoading"
+        style="?android:attr/progressBarStyle"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recycleTeknisi" />
 </androidx.constraintlayout.widget.ConstraintLayout>
