--- a/app/src/main/res/menu/menunavigator.xml
+++ b/app/src/main/res/menu/menunavigator.xml
@@ -11,5 +11,5 @@
     <item
         android:id="@+id/navigation_history"
         android:icon="@drawable/ic_star_white"
-        android:title="Favorit" />
+        android:title="Order Status" />
 </menu>
