--- a/app/src/main/res/layout/template_grid_dashboard.xml
+++ b/app/src/main/res/layout/template_grid_dashboard.xml
@@ -35,8 +35,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:textAlignment="center"
+                android:textColor="@color/white"
                 android:text="TextView"
-                android:textSize="15sp"
+                android:textSize="17sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
