--- a/app/src/main/res/layout/jenis_kerusakan_fragment.xml
+++ b/app/src/main/res/layout/jenis_kerusakan_fragment.xml
@@ -11,7 +11,7 @@
         android:id="@+id/list_kerusakan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="150dp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
 
@@ -41,7 +41,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginBottom="24dp"
-        android:text="Chat"
+        android:text="Contact Center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
