--- a/app/src/main/res/layout/jenis_kerusakan_fragment.xml
+++ b/app/src/main/res/layout/jenis_kerusakan_fragment.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
-        android:text="Priksa"
+        android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
